--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">Officer</string>
+    <string name="accessibility_label">Officer Accessibility</string>
+    <string name="accessibility_description">To detect if a power menu is opened, Officer needs accessibility settings. You can be rest assured that this setting has no other malicious intent.</string>
+    <string name="admin_label">Officer Admin Access</string>
+    <string name="admin_description">Now you may think why does this app require Device Admin access, but hey, if someone tries to shutdown your phone when it is locked you would want to prevent it, right? For this, Officer uses this privilege to lock your screen if this situation comes up.</string>
 </resources>
