1. Added elements on custom trigger screen 2. Added fat font

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,6 +23,11 @@
         If someone tries to open the power menu again, the timer restarts. This makes it much harder for a thief to shut down the phone before it locks.</string>
     <string name="set_timer_duration">Set timer duration in seconds</string>
     <string name="set_custom_trigger">Set custom trigger</string>
-    <string name="set_custom_info">Different phone manufacturers have different event triggers which get broadcasted when the power menu is open. Due to this, there is no one-size-fits all solution. Here, you can manually trigger the power menu and the app will detect a few events which were broadcasted. Try out all the options in the list of events below and select an option which works for your device.</string>
+    <string name="set_custom_info">Different phone manufacturers have different event triggers which get broadcasted when the power menu is opened. Hence, there is no one-size-fits all solution. Here, you can manually trigger the power menu and the app will detect a few related events which were broadcasted. Try out all the options in the list of events below and select an option which works for your device.</string>
     <string name="set_custom_trigger_desc">Set a custom trigger point for locking the screen. If the app is not working on your device, tap here.</string>
+    <string name="listening_for_events">Please open your device\'s power menu.\nListening for events…</string>
+    <string name="setup">Setup</string>
+    <string name="configure">Configure</string>
+    <string name="detected_events">Detected events:</string>
+    <string name="detected_events_hint">Generally, a power menu will have a name similar to \"Global Actions Dialog\".</string>
 </resources>
