--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -35,7 +35,7 @@
     <string name="save">SAVE</string>
     <string name="about">About</string>
     <string name="open_source_licenses">Open Source Licenses</string>
-    <string name="view_source_code">View Source Code</string>
+    <string name="view_source_code">View Source Code Repository</string>
     <string name="changelog">Changelog</string>
 
 <!--    Release Note Strings-->
@@ -43,4 +43,7 @@
     <string name="r1.0.1">- Added custom triggers\n- Moved About section to new page\n- Added Changelog page\n- Added open source licenses
     \n- Migrated buttons to match expressive theming\n- Added new fonts: Google Rounded Sans, Bagel Fat\n- Fixed issue where title appeared behind status bar</string>
     <string name="about_app">About App</string>
+    <string name="omkar_phadke">Omkar Phadke</string>
+    <string name="share_via_link">Share Officer App</string>
+    <string name="share_app_desc">Love the app? Star the repository and spread the word! It helps me stay motivated!</string>
 </resources>
